src/objects/Apttus_DealMgr__DealLineItem__c.object
<CustomObject>
    <description>Represents a product or service line item associated with a deal</description>
    <fields>
        <fullName>Apttus_DealMgr__BasePrice__c</fullName>
        <description>The base price is List price + Automatic Adjustments for individual products and options</description>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ChargeType__c</fullName>
        <description>The charge type associated with the product or service</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Cost__c</fullName>
        <description>The cost for the product or service with no adjustments</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DealId__c</fullName>
        <description>ID of the associated deal</description>
        <inlineHelpText>ID of the associated deal</inlineHelpText>
        <label>Deal</label>
        <referenceTo>Apttus_DealMgr__Deal__c</referenceTo>
        <relationshipLabel>Deal Line Items</relationshipLabel>
        <relationshipName>Deal_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DealSummaryGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the summary group associated with the item</description>
        <label>Deal Summary Group</label>
        <referenceTo>Apttus_DealMgr__DealSummaryGroup__c</referenceTo>
        <relationshipLabel>Deal Line Items</relationshipLabel>
        <relationshipName>DealLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ExtendedCost__c</fullName>
        <description>The extended cost is Quantity X Selling Term X Cost</description>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ExtendedListPrice__c</fullName>
        <description>The extended price is Quantity X Selling Term X List Price</description>
        <label>Extended List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ExtendedPrice__c</fullName>
        <description>The extended price is Quantity X Selling Term X Base Price</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__IsPrimaryLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line is the primary line for the product or option</description>
        <label>Is Primary Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ItemSequence__c</fullName>
        <description>The sequence of items belonging to a line</description>
        <label>Item Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__LineNumber__c</fullName>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ListPrice__c</fullName>
        <description>The list price for the product or service with no adjustments</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__NetPrice__c</fullName>
        <description>he net price for the product or service is the price after applying all manual adjustments</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__PriceType__c</fullName>
        <description>The price type</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ProductFamily__c</fullName>
        <description>The product family</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product or service</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Deal Line Items</relationshipLabel>
        <relationshipName>DealLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Quantity__c</fullName>
        <description>The product or service quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__SellingFrequency__c</fullName>
        <description>The selling frequency associated with the recurring or usage price</description>
        <label>Selling Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__SellingTerm__c</fullName>
        <description>The selling term associated with the product or service</description>
        <label>Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Deal Line Item</label>
    <nameField>
        <displayFormat>DI-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>